wikijournals-server-30 Correct alignment for article form (left align not center)

--- a/wikijournals/skins/common/shared.css
+++ b/wikijournals/skins/common/shared.css
@@ -489,7 +489,7 @@ table.wikitable > * > tr > td {
 table.wikitable > tr > th,
 table.wikitable > * > tr > th {
 	background-color: #f2f2f2;
-	text-align: center;
+	text-align: left;
 }
 table.wikitable > caption {
 	font-weight: bold;
